tests/ui/typech/generic_method_static_call_unsatisfied_constraints.lm
trait A {}

trait B {}

struct Foo { }

impl Foo {
    pub fn bar<T: A + B>(val: T) -> T {
        return val;
    }
}

fn bar() {
    Foo::bar<Boolean>(false);
}
